new endpoints, fixes
